# pico-sat

./: .gitignore  Cargo.toml  bench-compare.sh  coverage.sh  readme.md
benches/: n_queen.rs  one_of_expr.rs
examples/: from_boolean_expression.rs  package_version_resolver.rs
src/: boolean_expression.rs  dimacs.rs  heuristics.rs  lib.rs  solver.rs
src/solver/: async_solver.rs
tests/: build_expression_and_solve.rs
tests/data/: nqueen_4.dimacs  nqueen_4_2_f.dimacs  nqueen_4_2_t.dimacs
