[package]
name = "pico-sat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
tokio = {version="1.11.0", optional=true, features=["rt","sync"] }

[features]
default= ["async"]
async=[ "tokio" ]
