[package]
name = "pico-sat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
async-recursion = "0.3.2"
tokio = {version="1.11.0", optional=true, features=["rt","sync"] }
tracing = "0.1.27"
tracing-test = "0.1.0"

[dev-dependencies]
criterion = "0.3.5"
semver = "1.0.4"
test-case = "1.2.0"

[[bench]]
name = "one_of_expr"
harness = false

[[bench]]
name = "n_queen"
harness = false

[profile.bench]
debug=true

[features]
default= ["async"]
async=[ "tokio" ]
